feat: add all components

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -9,5 +9,7 @@
   "onHands": "сотрудник будет получать на руки",
   "tax": "НДФЛ, 13% от оклада",
   "cost": "за сотрудника в месяц",
-  "summary": "Сумма"
+  "summary": "Сумма",
+  "inDay": "в день",
+  "inHour": "в час"
 }
